# conver-listen

./: .gitignore  README.md  app.py  interview.py  pyproject.toml  tutor.py
.claude/skills/conver-listen/: SKILL.md
chat-ui/: tutor.py
outputs/senior-developer-interview/: senior-developer-interview.py
