[project]
name = "english-tutor-mvp"
version = "0.2.0"
description = "MVP: English conversation tutor (Vi/En text -> Claude reply -> Supertonic English speech)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "supertonic>=0.1.0",
    "anthropic>=0.40.0",
    "gradio>=4.44.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "deep-translator>=1.11.4",
]
